...
    <string name="edit_option">edit…</string>

    <string name="confirm">Confirm</string>
    <string name="ignore">Ignore</string>
    <string name="cancel">Cancel</string>
...
    <string name="next">Next</string>

    <string name="ok">OK</string>
    <string name="done">Done</string>
    <string name="close">Close</string>
...
    <string name="search_hint">Search</string>

    <string name="backpack_add">Add to backpack</string>

    <string name="share_website_text">share.catrob.at</string>
...

    <string name="degrees">degrees</string>
    <string name="background">Background</string>
    <string name="landscape">landscape</string>
    <string name="portrait">portrait</string>
...
    <!-- Settings activity -->
    <string name="preference_title">Settings</string>
    <string name="preference_title_language">Language</string>
    <string name="preference_description_language">Set the app\'s language</string>

    <string name="preference_title_web_access">Web access</string>
    <string name="preference_description_web_access">Edit to add or remove trusted domains</string>
    <string name="preference_screen_web_access_title">Edit trusted domains</string>
    <string name="preference_screen_web_access_dialog_title">Trusted domain</string>

...
    <string name="preference_description_ai_object_recognition">Enable object recognition and tracking sensors</string>

    <string name="preference_title_accessibility">Accessibility</string>
    <string name="preference_title_manage_extensions">Manage extensions</string>
    <string name="preference_description_accessibility">Change the app\'s appearance</string>
...
    <string name="preference_title_enable_nfc_bricks">Near Field Communication extension</string>
    <string name="preference_description_nfc_bricks">Allow the app to use NFC tags in projects</string>
    <string name="preference_title_enable_crash_reports">Sending anonymous crash reports</string>
    <string name="preference_description_crash_reports">Allow the app to send crash reports automatically</string>
    <!-- -->
...

    <!-- Options Menu Options -->
    <string name="backpack">Backpack</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
...
    <string name="backpack_title">Your backpack</string>
    <string name="pack">Pack</string>
    <string name="unpack">Unpack</string>
    <!--  -->

...

    <!-- Control bricks -->
    <string name="brick_when_started">When scene starts</string>
    <string name="brick_when">When tapped</string>
    <string name="brick_when_condition_when">When</string>
...
    <string name="got_it">Got it</string>
    <string name="preference_description_hints">Enable to show hints</string>
    <string name="preference_title_enable_hints">Show hints </string>
    <string name="hint_category">All bricks are sorted in categories. Choose the category you are looking for.</string>
    <string name="hint_bricks">To add a brick to your script, tap on the brick you want to use.</string>
...

    <!-- Multilingual List -->
    <string name="device_language">Your device\'s language</string>

    <!-- Symbols -->
...
    <string name="no_internet_connection">No internet connection. Make sure Wi-Fi or mobile
    data is turned on.</string>
    <string name="edit">Edit</string>
    <string name="data_value">Value</string>
    <string name="category_recently_used">Recently used</string>
...
